--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,7 @@ futures = "0.3"
 # --- Web & API ---
 reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
 url = "2.5.0"
-async-openai = "0.31.0"
+async-openai = { version = "0.31.0", features = ["embedding"] }
 
 # --- Data & Serialization ---
 serde = { version = "1.0", features = ["derive"] }
@@ -27,7 +27,9 @@ csv = "1.3"
 
 # --- Database ---
 sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
-pgvector = { version = "0.4", features = ["sqlx"] }
+pgvector = { version = "0.4", features = ["sqlx", "serde"] }
+uuid = { version = "1.0", features = ["v4", "serde"] }
+chrono = { version = "0.4", features = ["serde"] }
 
 # --- Observability & CLI ---
 tracing = "0.1"
