feat: migrate from OpenAI to Google Gemini API for embeddings
- Updated environment configuration to replace OpenAI API key with Google Gemini API key.
- Removed OpenAI client and dependencies from the project.
- Added new Gemini client for interacting with Google's embeddings API.
- Updated database schema to accommodate 768-dimensional embeddings from Gemini.
- Modified CLI commands and configuration to use Gemini API for semantic search and dataset harvesting.
- Updated README documentation to reflect changes in API usage and setup instructions.

--- a/.env.example
+++ b/.env.example
@@ -2,9 +2,9 @@
 # Must match docker-compose.yml: user=ceres_user, password=password, db=ceres_db
 DATABASE_URL=postgresql://ceres_user:password@localhost:5432/ceres_db
 
-# OpenAI API Configuration
-OPENAI_API_KEY=sk-your-api-key-here
-OPENAI_MODEL=text-embedding-3-small
+# Google Gemini API Configuration
+# Get your free API key at: https://aistudio.google.com/apikey
+GEMINI_API_KEY=your-gemini-api-key-here
 
 # Application Settings
 RUST_LOG=info
