feat: add portals.toml for multi-portal batch harvesting (#16)
* feat: add portals.toml for multi-portal batch harvesting (#4)

Add support for a configuration file to manage multiple CKAN portals
for batch harvesting operations.

Features:
- XDG-compliant config at ~/.config/ceres/portals.toml
- Auto-create template with pre-configured Italian portals (Milano, Sicilia)
- First-run UX: creates config and starts harvest immediately
- Three harvest modes:
  - `ceres harvest` - all enabled portals from config
  - `ceres harvest --portal <name>` - specific portal by name
  - `ceres harvest <url>` - single URL (backward compatible)
- Batch resilience: portal failures don't stop other harvests
- Summary report showing success/failure counts

Implementation:
- Add PortalsConfig, PortalEntry types in ceres-core/config.rs
- Add ConfigError variant to AppError
- Add BatchHarvestSummary, PortalHarvestResult types in sync.rs
- Add handle_harvest(), batch_harvest() in CLI main.rs
- Add toml and dirs dependencies for config parsing

Closes #4

* refactor: address Copilot review feedback

- Fix #1: Eliminate code duplication by unifying sync_portal and
  sync_portal_with_stats into a single function that returns SyncStats
- Fix #4: Make ConfigError message generic ("configuration file"
  instead of "portals.toml") to support custom config paths
- Fix #6: Change create_default_config parameter from &PathBuf to &Path
  for more idiomatic Rust

Removes ~170 lines of duplicated sync logic.

--- a/crates/ceres-core/Cargo.toml
+++ b/crates/ceres-core/Cargo.toml
@@ -25,3 +25,10 @@ sqlx.workspace = true
 
 # Hashing for delta detection
 sha2.workspace = true
+
+# Configuration
+toml.workspace = true
+dirs.workspace = true
+
+# Logging
+tracing.workspace = true
