feat: implement automated release workflow and update versioning to 0.1.0

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ members = [
 resolver = "2"
 
 [workspace.package]
-version = "0.0.1"
+version = "0.1.0"
 edition = "2021"
 authors = ["Andrea Bozzo"]
 license = "Apache-2.0"
@@ -67,6 +67,6 @@ toml = "0.9"
 dirs = "6.0"
 
 # Internal crates
-ceres-core = { path = "crates/ceres-core" }
-ceres-client = { path = "crates/ceres-client" }
-ceres-db = { path = "crates/ceres-db" }
+ceres-core = { version = "0.1.0", path = "crates/ceres-core" }
+ceres-client = { version = "0.1.0", path = "crates/ceres-client" }
+ceres-db = { version = "0.1.0", path = "crates/ceres-db" }
