--- a/crates/ceres-cli/Cargo.toml
+++ b/crates/ceres-cli/Cargo.toml
@@ -6,6 +6,8 @@ authors.workspace = true
 license.workspace = true
 repository.workspace = true
 description = "Command-line interface for Ceres semantic search engine"
+keywords = ["ckan", "semantic-search", "cli", "open-data"]
+categories = ["command-line-utilities"]
 
 [[bin]]
 name = "ceres"
