fix: rename ceres-cli to ceres-search (crates.io name conflict)
- Renamed package from ceres-cli to ceres-search
- Bumped version to 0.1.1
- Updated README and workflow accordingly

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -201,7 +201,7 @@ jobs:
           echo "Waiting 60s for crates.io indexing..."
           sleep 60
 
-          publish_crate ceres-cli
+          publish_crate ceres-search
           echo "All crates published successfully"
 
   release:
